# TellMe

./: .env.example  .gitignore  build.bat  pyproject.toml  requirements-dev.txt  requirements.txt  run_checks.py  run_dev.py  tellme_installer.iss
backend/: __init__.py
backend/app/: bootstrap.py  lifecycle.py
backend/config/: constants.py  defaults.py  schema.py  settings.py
backend/contracts/: __init__.py  llm.py  parser.py  plugin.py  repository.py  search.py  speech.py
backend/core/: __init__.py  container.py  engine.py  engine_resolver.py  event_bus.py  exceptions.py  logging.py  metadata_extractor.py  model_library_service.py  model_registry.py  model_runtime.py  provider_registry.py  secure_storage.py  tasks.py
backend/core/runtime/: events.py  interfaces.py  manager.py  memory.py  models.py  monitor.py  planner.py  validator.py
backend/domain/: evaluation.py  events.py  interview.py  interview_mode.py  job_description.py  model_registration.py  models.py  provider.py  question.py  resume.py  session.py
backend/model_management/: loader.py  manager.py  metadata.py  registry.py  validator.py
backend/plugins/: loader.py  manager.py  registry.py
backend/prompts/analysis/: base.py
backend/prompts/evaluation/: base.py
backend/prompts/interview/: base.py
backend/prompts/system/: base.py
backend/providers/adapters/: local_providers.py  (+2 more)
backend/utils/: files.py  json.py  paths.py  strings.py  validation.py
frontend/: __init__.py  app.py
frontend/assets/: style.qss
frontend/core/: app_context.py  base_screen.py  base_viewmodel.py  navigation.py  profile_service.py  resources.py  theme.py
frontend/engine/: __init__.py  animation_manager.py  qss_hydrator.py  style_engine.py  theme_cache.py  token_resolver.py
frontend/state/: draft_manager.py  draft_model.py  store.py
frontend/theme/: animation.py  colors.py  constants.py  icons.py  radius.py  shadows.py  spacing.py  typography.py  zindex.py
frontend/themes/: __init__.py  base_theme.py
frontend/views/: main_window.py
runtime/: model_config.json  models.json  provider_anthropic.json  provider_gemini.json  provider_llama_cpp.json  provider_ollama.json  provider_openai_compatible.json  runtime_config.json
tests/integration/: test_e2e_runtime.py
tests/performance/: test_performance.py
tests/regression/: test_state_machine.py
tests/stress/: test_stress_runtime.py
tests/unit/: test_import_pipeline.py  test_memory_estimator.py  test_negative_runtime.py  test_runtime_planner.py
(+130 files in other folders)
