[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tellme"
version = "0.1.0"
description = "AI-powered Interview Copilot desktop application"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "PySide6>=6.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "SQLAlchemy>=2.0.30",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1"
]


[project.optional-dependencies]
# LLM Inference (optional: users install separately if using llama.cpp)
# llama-cpp-python = ">=0.2.0"

# PDF Parsing
pdfplumber = ["pdfplumber>=0.11.0"]

# Development tooling
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "frontend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
